--- a/_static/css/logd_dark.css
+++ b/_static/css/logd_dark.css
@@ -14,6 +14,10 @@ body {
     background-color: #1b1b1b;
 }
 
+.shareme {
+    color: #ffffff !important;
+}
+
 .footer {
     background-color: #1b1b1b;
 }
